updated index.html file

--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-
+<html>
+  <title>Testing Site </title>
+  <body>
+    <h1> Testing Github Page </h1>
+  </body>
+  
+  <style>
+    body {
+     
+      background-color: green;
+      color: white;
+      text-align: center;
+    }
+  </style>
+</html>
